--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/faker": "^5.5.8",
+    "faker": "^5.5.3",
+    "miragejs": "^0.1.41",
     "typescript": "^4.3.2"
   }
 }
